# antarctica

./: .gitignore  AGENTS.md  README.md  TRANSAQ_REQUIREMENTS.md  pyproject.toml
antarctica/: cli.py  data.py  detector.py  engine.py  models.py  recorder.py  replay_jsonl.py
examples/: book.csv  multi_symbol_demo.py  trades.csv
flowcore/: __init__.py  cli.py  config.py  engine.py  live.py  moex.py  recorder.py  replay_jsonl.py  run.py  signals.py
tests/: test_jsonl_replay.py  test_live.py  test_moex.py  test_recorder.py  test_run.py  test_strategy.py
