[project]
name = "antarctica"
version = "0.1.0"
description = "MOEX Level II liquidity wall detector and strategy replay prototype"
requires-python = ">=3.10"

[project.scripts]
antarctica-replay = "flowcore.cli:main"
antarctica-live = "flowcore.live:main"
antarctica-record = "flowcore.recorder:main"
antarctica-replay-jsonl = "flowcore.replay_jsonl:main"
antarctica-run = "flowcore.run:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
